# fastpdf-openrag-native

./: .env.example  .gitignore  OPENRAG_STARTUP.md  PDF_PIPELINE_DEBUG.md  README.md  pyproject.toml
deploy/openrag-hosting-export/: .env.example  .gitignore  README.md  docker-compose.yml
deploy/openrag-hosting-export/scripts/: export_local_openrag_config.sh  healthcheck.sh  restart_stack.sh
docker/: openrag-override.yml
examples/: merged_notes_20260329T215124Z_all_pages.scope.json  sample_scope.json  sample_summary_payload.json
openrag-hotfixes/: api_v1_chat.py  api_v1_search.py  session_manager.py  sitecustomize.py
scripts/: restart_openrag_stack.sh  restart_serve_ui.sh  smoke_test_openrag_stack.sh
src/fastpdf_openrag_native/: __init__.py  chunking.py  citations.py  cli.py  fastpdf_loader.py  flow_upgrade.py  langflow.py  layered_output.py  models.py  ocr_extract.py  openrag.py  opensearch.py  pdf_workflow.py  prompts.py  reranking.py  service.py  settings.py  simple_grounded.py  summarizer.py  trace.py
tests/: test_citations.py  test_fastpdf_loader.py  test_flow_upgrade.py  test_layered_output_filters.py  test_openrag_hotfixes.py  test_opensearch_repair.py  test_pdf_workflow.py  test_prompts.py  test_service.py  test_simple_grounded.py  test_summarizer.py  test_trace_and_ocr.py
